# NumberTilesBase

./: .gitignore  CMakeLists.txt  numberTiles.cnf  readme.md
src/: NumberTiles.h  Tablero.cpp  Tablero.h  casilla.cpp  casilla.h  entorno.cpp  entorno.h  juego.cpp  juego.h  main.cpp  numberTiles.cpp  prueba.cpp  pruebasCasilla.cpp  pruebasCasilla.h  pruebasTablero.cpp  pruebasTablero.h
